--- a/src/main/resources/application-real.yml
+++ b/src/main/resources/application-real.yml
@@ -2,6 +2,6 @@ spring:
   profiles:
     include: oauth,real-db
   jpa:
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+    database-platform: org.hibernate.dialect.MariaDB102Dialect
   session:
     store-type: jdbc
