--- a/src/main/resources/application-real.properties
+++ b/src/main/resources/application-real.properties
@@ -1,5 +1,5 @@
 spring.profiles.include=oauth,real-db
 
-spring.jpa.database-platform=org.hibernate.dialect.MariaDB102Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB102Dialect
 
 spring.session.store-type=jdbc
